fix spacing on icons

--- a/assets/css/nav/_bottom_nav_mobile.scss
+++ b/assets/css/nav/_bottom_nav_mobile.scss
@@ -47,6 +47,8 @@
 }
 
 .m-bottom-nav-mobile__icon {
+  line-height: 0;
+
   &.m-bottom-nav-mobile__icon--swings-view svg {
     transform: scaleX(-1);
     fill: $color-gray-50;
